src/objects/cb5__CBReport__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBFolder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Folder</label>
        <referenceTo>cb5__CBFolder__c</referenceTo>
        <relationshipLabel>CB Report Folders</relationshipLabel>
        <relationshipName>CB_R_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Filter__c</fullName>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Grouping__c</fullName>
        <description>List of fields need to be grouped</description>
        <label>Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Mode__c</fullName>
        <label>Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                    <default>true</default>
                    <label>Auto</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__SubtotalMode__c</fullName>
        <label>Subtotal Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                    <default>true</default>
                    <label>Top</label>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
                <value>
                    <fullName>BottomWithHeader</fullName>
                    <label>Bottom With Header</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__needOnlyTotal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Need Only Total Lines</description>
        <label>need Only Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__needQuarterTotals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if report needs quarter data columns</description>
        <label>Need Quarter Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__oneColumnMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if report needs one column mode</description>
        <label>One Column Mode</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Report</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__Mode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>